--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
@@ -48,12 +48,13 @@
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "13.4.9",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
