--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bson": "^6.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
