--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-table": "^8.20.6",
     "@types/node": "20.6.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "18.2.7",
@@ -66,6 +67,7 @@
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
