--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_URL = "https://myfashionfind.shop"
-# API_URL = "http://localhost:4000"
+# API_URL = "https://myfashionfind.shop"
+API_URL = "http://localhost:4000"
