--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "fetch-intercept": "^2.4.0",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "13.4.9",
     "next-themes": "^0.3.0",
@@ -75,5 +77,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
