--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # API_URL = "https://myfashionfind.shop"
-API_URL = "http://localhost:4000"
-# API_URL = "http://51.21.131.240:4000/"
+# API_URL = "http://localhost:4000"
+API_URL = "http://51.21.131.240:4000"
