--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
-    "next": "13.4.9",
+    "next": "^15.1.4",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
