--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.3",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
