--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.6",
     "@types/node": "20.6.2",
@@ -59,6 +61,7 @@
     "lucide-react": "^0.446.0",
     "next": "^15.1.4",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^3.4.120",
     "postcss": "^8.5.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -80,6 +83,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "raw-loader": "^4.0.2"
   }
 }
