--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # API_URL = "https://myfashionfind.shop"
-API_URL = "http://localhost:4000"
+# API_URL = "http://localhost:4000"
+API_URL = "https://dev.apply.litschool.in"
 # API_URL = "http://51.21.131.240:4000"
 
 AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY
