--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -82,6 +82,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "whatwg-fetch": "^3.6.20",
     "zod": "^3.23.8"
   },
   "devDependencies": {
