--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 # API_URL = "https://myfashionfind.shop"
-# API_URL = "http://localhost:4000"
-API_URL = "https://dev.apply.litschool.in"
+API_URL = "http://localhost:4000"
+# API_URL = "https://dev.apply.litschool.in"
 # API_URL = "http://51.21.131.240:4000"
 
 NEXT_PUBLIC_AWS_ACCESS_KEY_ID=AKIA3A3WKZTB3X3X75FW
 NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=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
 NEXT_PUBLIC_AWS_REGION=eu-north-1
-
