--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "exceljs": "^4.4.0",
     "fetch-intercept": "^2.4.0",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
