🚚 (aws): fix url
fix: update s3 url for aws

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXT_PUBLIC_AWS_ACCESS_KEY_ID=AKIA3A3WKZTB3X3X75FW
 NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=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
 NEXT_PUBLIC_AWS_REGION=eu-north-1
 
+NEXT_PUBLIC_AWS_RESOURCE_URL="https://dev-application-portal.s3.eu-north-1.amazonaws.com"
