--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API_URL = "http://localhost:4000"
-API_URL = "https://dev.apply.litschool.in"
+API_URL = "https://applyone.litschool.in/api"
 
 NEXT_PUBLIC_AWS_BUCKET="dev-application-portal"
 NEXT_PUBLIC_AWS_ACCESS_KEY_ID=AKIA3A3WKZTB3X3X75FW
